--- a/upcoming.html
+++ b/upcoming.html
@@ -12,6 +12,7 @@
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/home.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/wbv5ymt.css">
 
     <style>
       .bd-placeholder-img {
@@ -303,49 +304,49 @@
                     a[i].style.display = "none";
                     }
                 }
-            }</script>
+            }
+            </script>
 
           
           
           <!--Smaller Cards-->
             <div class="container">
-                <div class="row row-cols-1 row-cols-md-3 ">
-                  <div class="filterDiv member-only" >
-                      <div class="col mb-4 ">
-                        <div class="card h-100">
-                          <img src="img/card1.png" class="card-img-top" alt="...">
+                <div class="card-deck mb-3">
+                        <div class="card filterDiv member-only">
                           <div class="card-body">
-                            <h5 class="card-title">Corporate Workshop Series Session 1: Adjusting to the New Normal: University-Corporate Relations in the Changing Landscape</h5>
                             <p class="card-text">August 11, 12:00 pm EDT</p>
-                            <a href="#" class="btn btn-primary">Register</a>
+                            <h5 class="card-title">
+                              Corporate Workshop Series Session 1: Adjusting to the New Normal: University-Corporate Relations in the Changing Landscape 
+                              <br/>
+                              <small><span class="badge badge-pill badge-secondary">Member-Only</span></small>
+                            </h5>
+                            <a href="#" class="btn btn-primary mt-3">Register</a>
                           </div>
+                          <img src="img/card1.png" class="card-img-bottom" alt="...">
                         </div>
-                      </div>
-                  </div> 
-                  <div class="filterDiv public" >
-                      <div class="col mb-4">
-                        <div class="card h-100">
-                          <img src="img/card2.png" class="card-img-top" alt="...">
+                        <div class="card filterDiv public">
                           <div class="card-body">
-                            <h5 class="card-title">Corporate Workshop Series Session 2: It’s Not Enough: Increasing Diversity & Inclusion Programming on Campus</h5>
                             <p class="card-text">September 9, 11:00 am EDT</p>
-                            <a href="#" class="btn btn-primary">Register</a>
+                            <h5 class="card-title">
+                              Corporate Workshop Series Session 2: It’s Not Enough: Increasing Diversity & Inclusion Programming on Campus
+                              <br/>
+                              <small><span class="badge badge-pill badge-secondary">Member-Only</span></small>
+                            </h5>
+                            <a href="#" class="btn btn-primary mt-3">Register</a>
                           </div>
+                          <img src="img/card2.png" class="card-img-bottom" alt="...">
                         </div>
-                      </div>
-                  </div> 
-                  <div class="filterDiv member-only virtual-events" >
-                      <div class="col mb-4">
-                        <div class="card h-100">
-                          <img src="img/card3.png" class="card-img-top" alt="...">
+                        <div class="card member-only virtual-events">
                           <div class="card-body">
-                            <h5 class="card-title">Webinar: What is a Big Ideas Initiative? Aligning Industry Priorities with Fundraising Campaigns</h5>
                             <p class="card-text">December 8, 3:00 pm EDT</p>
-                            <a href="#" class="btn btn-primary">Register</a>
+                            <h5 class="card-title">
+                              Webinar: What is a Big Ideas Initiative? Aligning Industry Priorities with Fundraising Campaigns
+                              <small><span class="badge badge-pill badge-secondary">Virtual</span></small>
+                            </h5>
+                            <a href="#" class="btn btn-primary mt-3">Register</a>
                           </div>
+                          <img src="img/card3.png" class="card-img-top" alt="...">
                         </div>
-                      </div>
-                  </div>
                 </div>
             </div>
 
