--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/sticky-footer-navbar/">
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/home.css" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=East+Sea+Dokdo&display=swap" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
   </head>
 
   <body class="d-flex flex-column h-100">
@@ -361,7 +359,7 @@
 
     <footer class="footer mt-auto py-3">
       <div class="container">
-        <span class="text-light d-lg-flex justify-content-lg-center">
+        <span class="text-muted d-lg-flex justify-content-lg-center">
           &copy; Copyright NACRO 2020 &emsp;&emsp; 
           <a href="https://www.linkedin.com/groups/125703"><img class="footer-logo" src="img/linkedin.png" alt="LinkedIn"></a> &emsp;&emsp; 
           <a href="https://www.facebook.com/NACROCON/"><img class="footer-logo" src="img/facebook.png" alt="Facebook"></a> &emsp;&emsp; 
