carousel captions larger and have background

--- a/index.html
+++ b/index.html
@@ -107,20 +107,20 @@
           <div class="carousel-inner">
             <div class="carousel-item active" data-interval="5000">
               <img class="d-block w-100 startImage" src="img/home_carousel1.png" alt="First slide image">
-              <div class="carousel-caption d-flex justify-content-left">
-                <h5>Build Relationships</h5>
+              <div class="carousel-caption text-light d-flex justify-content-left">
+                <h2 class="carCap bg-dark">Build Relationships</h2>
               </div>
             </div>
             <div class="carousel-item" data-interval="5000">
               <img class="d-block w-100 startImage" src="img/home_carousel2.png" alt="Second slide image">
-              <div class="carousel-caption d-flex justify-content-left">
-                <h5>Refine Strategies</h5>
+              <div class="carousel-caption text-light d-flex justify-content-left">
+                <h2 class="carCap bg-dark">Refine Strategies</h2>
               </div>
             </div>
             <div class="carousel-item" data-interval="5000">
               <img class="d-block w-100 startImage" src="img/home_carousel3.png" alt="Third slide image">
-              <div class="carousel-caption d-flex justify-content-left">
-                <h5>Attend Conferences</h5>
+              <div class="carousel-caption text-light d-flex justify-content-left">
+                <h2 class="carCap bg-dark">Attend Conferences</h2>
               </div>
             </div>
           </div>
