--- a/index.html
+++ b/index.html
@@ -107,20 +107,20 @@
           <div class="carousel-inner">
             <div class="carousel-item active" data-interval="5000">
               <img class="d-block w-100 startImage" src="img/home_carousel1.png" alt="First slide image">
-              <div class="carousel-caption text-light d-flex justify-content-left">
-                <h2 class="carCap bg-dark">Build Relationships</h2>
+              <div class="carousel-caption text-light d-flex justify-content-end">
+                <b><h1 class="carCap">Build Relationships</h1></b>
               </div>
             </div>
             <div class="carousel-item" data-interval="5000">
               <img class="d-block w-100 startImage" src="img/home_carousel2.png" alt="Second slide image">
-              <div class="carousel-caption text-light d-flex justify-content-left">
-                <h2 class="carCap bg-dark">Refine Strategies</h2>
+              <div class="carousel-caption text-light d-flex justify-content-end">
+                <b><h1 class="carCap">Refine Strategies</h1></b>
               </div>
             </div>
             <div class="carousel-item" data-interval="5000">
               <img class="d-block w-100 startImage" src="img/home_carousel3.png" alt="Third slide image">
-              <div class="carousel-caption text-light d-flex justify-content-left">
-                <h2 class="carCap bg-dark">Attend Conferences</h2>
+              <div class="carousel-caption text-light d-flex justify-content-end">
+                <b><h1 class="carCap">Attend Conferences</h1></b>
               </div>
             </div>
           </div>
