raquo for home page

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                   <br/><br/><br/>
                   <p class="card-text">Join NACRO for our annual conference to network and learn from other corporate relations professionals, build a holistic corporate relations “blueprint," and take part in our Mastery Series!</p>
                   <br/><br/>
-                  <p class="card-text"><a href="conference.html">Learn more >></a></p>
+                  <p class="card-text"><a href="conference.html">Learn more &raquo;</a></p>
                 </div>
               </div>
             </div>
