--- a/upcoming.html
+++ b/upcoming.html
@@ -256,41 +256,41 @@
           <!--Smaller Cards-->
             <div class="container">
               <div class="card-deck mb-3">
-                <div class="card filterDiv member-only col-sm-4">
-                  <div class="card-body">
-                    <p class="card-text">August 11, 12:00 pm EDT</p>
-                    <h5 class="card-title">
-                      Corporate Workshop Series Session 1: Adjusting to the New Normal: University-Corporate Relations in the Changing Landscape 
-                      <small><span class="badge badge-pill badge-secondary">Member-Only</span></small>
-                    </h5>
-                    <a href="#" class="btn btn-primary mt-3">Register</a>
-                  </div>
-                  <img src="img/card1.png" class="card-img-bottom" alt="...">
-                </div>
-                <div class="card filterDiv public col-sm-4">
-                  <div class="card-body">
-                    <p class="card-text">September 9, 11:00 am EDT</p>
-                    <h5 class="card-title">
-                      Corporate Workshop Series Session 2: It’s Not Enough: Increasing Diversity & Inclusion Programming on Campus
-                      <br/>
-                      <small><span class="badge badge-pill badge-secondary">Public</span></small>
-                    </h5>
-                    <a href="#" class="btn btn-primary mt-3">Register</a>
-                  </div>
-                  <img src="img/card2.png" class="card-img-bottom" alt="...">
-                </div>
-                <div class="card member-only virtual-events col-sm-4">
-                  <div class="card-body">
-                    <p class="card-text">December 8, 3:00 pm EDT</p>
-                    <h5 class="card-title">
-                      Webinar: What is a Big Ideas Initiative? Aligning Industry Priorities with Fundraising Campaigns
-                      <br/>
-                      <small><span class="badge badge-pill badge-secondary">Virtual</span></small>
-                    </h5>
-                    <a href="#" class="btn btn-primary mt-3">Register</a>
-                  </div>
-                  <img src="img/card3.png" class="card-img-bottom" alt="...">
-                </div>
+                      <div class="card filterDiv member-only">
+                        <div class="card-body">
+                          <p class="card-text">August 11, 12:00 pm EDT</p>
+                          <h5 class="card-title">
+                            Corporate Workshop Series Session 1: Adjusting to the New Normal: University-Corporate Relations in the Changing Landscape 
+                            <small><span class="badge badge-pill badge-secondary">Member-Only</span></small>
+                          </h5>
+                          <a href="#" class="btn btn-primary mt-3">Register</a>
+                        </div>
+                        <img src="img/card1.png" class="card-img-bottom" alt="...">
+                      </div>
+                      <div class="card filterDiv public">
+                        <div class="card-body">
+                          <p class="card-text">September 9, 11:00 am EDT</p>
+                          <h5 class="card-title">
+                            Corporate Workshop Series Session 2: It’s Not Enough: Increasing Diversity & Inclusion Programming on Campus
+                            <br/>
+                            <small><span class="badge badge-pill badge-secondary">Public</span></small>
+                          </h5>
+                          <a href="#" class="btn btn-primary mt-3">Register</a>
+                        </div>
+                        <img src="img/card2.png" class="card-img-bottom" alt="...">
+                      </div>
+                      <div class="card member-only virtual-events">
+                        <div class="card-body">
+                          <p class="card-text">December 8, 3:00 pm EDT</p>
+                          <h5 class="card-title">
+                            Webinar: What is a Big Ideas Initiative? Aligning Industry Priorities with Fundraising Campaigns
+                            <br/>
+                            <small><span class="badge badge-pill badge-secondary">Virtual</span></small>
+                          </h5>
+                          <a href="#" class="btn btn-primary mt-3">Register</a>
+                        </div>
+                        <img src="img/card3.png" class="card-img-bottom" alt="...">
+                      </div>
               </div>
             </div>
           </div>
