--- a/conference.html
+++ b/conference.html
@@ -74,7 +74,7 @@
                   <a class="dropdown-item" href="#">Publications</a>
                   <a class="dropdown-item" href="#">Videos</a>
                   <div class="dropdown-divider"></div>
-                  <span class="dropdown-item-text text-muted"><small><strong>Member Only Content</strong></small></span>
+                  <h6 class="moc">Member Only Content</h6>
                   <a class="dropdown-item" href="#">2019 Research Report</a>
                   <a class="dropdown-item" href="#">Member Directory</a>
                   <a class="dropdown-item" href="#">Metric Toolbox</a>
@@ -97,7 +97,7 @@
     <!-- Begin page content -->
     <main role="main" class="flex-shrink-0">
       <div class="container w-100">
-        <div class="row justify-content-center my-3">
+        <div class="row justify-content-center my-5">
             <h1>2020 Virtual Conference</h1>   
         </div>
 
@@ -158,7 +158,7 @@
                                         <svg class="bi bi-chevron-right" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                           <path fill-rule="evenodd" d="M6.646 3.646a.5.5 0 01.708 0l6 6a.5.5 0 010 .708l-6 6a.5.5 0 01-.708-.708L12.293 10 6.646 4.354a.5.5 0 010-.708z"/>
                                         </svg>
-                                        <span>Opening Remarks and Welcome</span>
+                                        <span class="pl-2">Opening Remarks and Welcome</span>
                                       </button>
                                   </h2>
                                   <span class="float-right">11:30 am - 11:50 am</span>
@@ -188,7 +188,7 @@
                                         <svg class="bi bi-chevron-right" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                           <path fill-rule="evenodd" d="M6.646 3.646a.5.5 0 01.708 0l6 6a.5.5 0 010 .708l-6 6a.5.5 0 01-.708-.708L12.293 10 6.646 4.354a.5.5 0 010-.708z"/>
                                         </svg>
-                                        Jump-Starting America: How Breakthrough Science Can Revive Economic Growth and the American Dream
+                                        <span class="pl-2">Jump-Starting America: How Breakthrough Science Can Revive Economic Growth and the American Dream</span>
                                       </button>
                                   </h2>
                                   <span class="float-right">11:50 am – 12:20 pm</span>
@@ -217,7 +217,7 @@
                                         <svg class="bi bi-chevron-right" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                           <path fill-rule="evenodd" d="M6.646 3.646a.5.5 0 01.708 0l6 6a.5.5 0 010 .708l-6 6a.5.5 0 01-.708-.708L12.293 10 6.646 4.354a.5.5 0 010-.708z"/>
                                         </svg>
-                                        Addressing Diversity, Inclusion and Belonging in Higher Education
+                                        <span class="pl-2">Addressing Diversity, Inclusion and Belonging in Higher Education</span>
                                       </button>
                                   </h2>
                                   <span class="float-right">12:30 pm  – 2:00 pm</span>
@@ -248,7 +248,7 @@
                                         <svg class="bi bi-chevron-right" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                           <path fill-rule="evenodd" d="M6.646 3.646a.5.5 0 01.708 0l6 6a.5.5 0 010 .708l-6 6a.5.5 0 01-.708-.708L12.293 10 6.646 4.354a.5.5 0 010-.708z"/>
                                         </svg>
-                                        Future of Universities:  What will higher education look like in 2040?
+                                        <span class="pl-2">Future of Universities:  What will higher education look like in 2040?</span>
                                       </button>
                                   </h2>
                                   <span class="float-right">2:10 pm – 3:10 pm</span>
@@ -289,7 +289,7 @@
                                         <svg class="bi bi-chevron-right" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                           <path fill-rule="evenodd" d="M6.646 3.646a.5.5 0 01.708 0l6 6a.5.5 0 010 .708l-6 6a.5.5 0 01-.708-.708L12.293 10 6.646 4.354a.5.5 0 010-.708z"/>
                                         </svg>
-                                        NACRO Business Meeting & Awards  
+                                        <span class="pl-2">NACRO Business Meeting & Awards</span> 
                                       </button>
                                   </h2>
                                   <span class="float-right">3:10 pm - 3:30 pm</span>
