--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <div class="carousel-inner">
             <div class="carousel-item active" data-interval="5000">
               <img class="d-block w-100 startImage" src="img/home_carousel1.png" alt="First slide image">
-              <div class="carousel-caption text-light d-flex justify-content-end">
+              <div class="carousel-caption text-light d-flex justify-content-center w-100">
                 <b><h1 class="carCap">Build Relationships</h1></b>
               </div>
             </div>
