adding color styling

--- a/index.html
+++ b/index.html
@@ -100,45 +100,32 @@
 
         <!-- Intro slideshow -->
         <div id="carouselImages" class="carousel slide carousel-fade" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselImages" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselImages" data-slide-to="1"></li>
-            <li data-target="#carouselImages" data-slide-to="2"></li>
-          </ol>
+          
           <div class="carousel-inner">
-            <div class="carousel-item active" data-interval="5000">
+            <div class="carousel-item active" data-interval="3000">
               <img class="d-block w-100 startImage" src="img/home_carousel1.png" alt="First slide image">
               <div class="carousel-caption text-light d-flex justify-content-center w-100">
                 <b><h1 class="carCap">Build Relationships</h1></b>
               </div>
             </div>
-            <div class="carousel-item" data-interval="5000">
+            <div class="carousel-item" data-interval="3000">
               <img class="d-block w-100 startImage" src="img/home_carousel2.png" alt="Second slide image">
-              <div class="carousel-caption text-light d-flex justify-content-end">
+              <div class="carousel-caption text-light d-flex justify-content-center w-100">
                 <b><h1 class="carCap">Refine Strategies</h1></b>
               </div>
             </div>
-            <div class="carousel-item" data-interval="5000">
+            <div class="carousel-item" data-interval="3000">
               <img class="d-block w-100 startImage" src="img/home_carousel3.png" alt="Third slide image">
-              <div class="carousel-caption text-light d-flex justify-content-end">
+              <div class="carousel-caption text-light d-flex justify-content-center w-100">
                 <b><h1 class="carCap">Attend Conferences</h1></b>
               </div>
             </div>
           </div>
-          <a class="carousel-control-prev" href="#carouselImages" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselImages" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
         </div>
 
-        <hr>
 
         <!-- Highlights section -->
-        <h1>Highlights</h1>
+        <h1 class="mt-5 mb-3">Highlights</h1>
         <div id="carouselHighlights" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#carouselHighlights" data-slide-to="0" class="active"></li>
@@ -254,7 +241,7 @@
         <div class="container">
           <div class="row">
             <div class="col">
-              <div class="card">
+              <div class="card jcgrow py-3">
                 <div class="card-body">
                   <h1 class="card-title text-center">Join. Connect. Grow.</h1>
                   <p class="card-text text-center">
@@ -268,7 +255,6 @@
         </div>
 
         <hr>
-
         <!-- Annual conference section -->
         <div class="container">
           <div class="row">
@@ -293,8 +279,8 @@
         <hr>
 
         <!-- Member insights section -->
-        <div id="carouselInsights" class="carousel slide" data-ride="carousel">
-          <h2 class="text-center">Member Insights</h2>
+        <div id="carouselInsights" class="carousel slide my-3 py-3" data-ride="carousel">
+          <h2 class="text-center pt-3">Member Insights</h2>
           <br/>
           <ol class="carousel-indicators">
             <li data-target="#carouselInsights" data-slide-to="0" class="active"></li>
@@ -345,14 +331,7 @@
             </div>
             <br/><br/><br/><br/><br/><br/><br/>
           </div>
-          <a class="carousel-control-prev" href="#carouselInsights" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselInsights" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
+          
         </div>
 
       </div>
