--- a/conference.html
+++ b/conference.html
@@ -104,7 +104,7 @@
         <div class="row justify-content-md-center">
             <div class="col-12 col-md-3 order-md-1 order-3">
               <div class="row my-3 my-md-1"> 
-                <div class="col-sm-6 col-md-12">
+                <div class="col-sm-6 col-md-12 w-100">
                   <img src="img/conference.png" alt="Conference" title="Conference" class="w-100">
                 </div>
                 <div class="col-sm-6 col-md-12 side-nav border bg-light my-3">
